adding more features

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -11,12 +11,21 @@
   "parametre": "الإعدادات",
   "about": "تعرف علينا",
   "home": "الرئيسية",
+  "carburant": "الوقود",
   "dir": "rtl",
+  "vehicule": "السيارات",
+  "driver": "السائقين",
+  "mission": "المهمات",
+  "maintenance": "الصيانة",
   "info": "معلومة",
   "work": "الصيانة",
   "rg": "مراجعة عامة",
   "user": "المستخدم",
   "disconnect": "الخروج",
   "profile": "بروفايل",
-  "lock": "إغلاق"
+  "lock": "إغلاق",
+  "nom": "الإسم ",
+  "prenom": "اللقب",
+  "adresse": "العنوان",
+  "permis": "رخصة السياقة"
 }
