--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,9 +1,10 @@
 {
-  "titreProject": "Project Title",
+  "titreProject": "Cars Management System",
   "enumeration": "Enumerations",
   "parametre": "Settings",
   "about": "About",
   "home": "Home",
+  "carburant": "gas",
   "addArticle": "Add New Article",
   "display": "Description",
   "value": "Value",
@@ -13,14 +14,21 @@
   "noData": "No data matching the filter :",
   "dir": "ltr",
   "info": "info",
-  "user": "User",
-  "react": "Engins",
-  "tuy": "Tuyères en",
-  "VKA": "VKA",
-  "turbo": "Turbo Démarreur en",
-  "work": "Works",
+  "vehicule": "Vehicles",
+  "driver": "Drivers",
+  "mission": "Missions",
+  "maintenance": "Maintenance",
+  "user": "User", 
+  "username": "Username",
+  "password": "Password",
+  "signin": "Sign In",
+  "signup": "Sign Up",
   "rg": "General Check",
   "disconnect": "Logout",
   "profile": "Profile",
-  "lock": "Lock"
+  "lock": "Lock",
+  "nom": "Name ",
+  "prenom": "First Name",
+  "adresse": "Address",
+  "permis": "Drive Licence"
 }
