--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1,9 +1,10 @@
 {
-  "titreProject": "Titre de projet",
+  "titreProject": "Gestion Parc Automobile",
   "enumeration": "Enumerations",
   "parametre": "Parametre",
   "about": "A propos",
   "home": "Accueil",
+  "carburant": "Carburant",
   "addArticle": "Ajouter un article",
   "display": "Description",
   "value": "Valeur",
@@ -13,14 +14,22 @@
   "noData": "Pas de donnees a afficher pour le filter :",
   "dir": "ltr",
   "info": "info",
-  "react": "Réacteurs",
-  "tuy": "Tuyères",
-  "VKA": "VKA",
-  "turbo": "Turbo Démarreur",
+  "vehicule": "Vehicules",
+  "driver": "Chauffeurs",
+  "mission": "Missions",
+  "maintenance": "Entretiens",
   "work": "Travaux",
   "rg": "Révision Générale",
   "user": "Utilisateur",
   "disconnect": "Se deconnecter",
   "profile": "Profile",
-  "lock": "Verouiller"
+  "lock": "Verouiller",
+  "nom": "Nom ",
+  "prenom": "Prenom",
+  "username": "Nom d'utilisateur",
+  "password": "Mot de passe",
+  "signin": "Se connecter",
+  "signup": "S'enregistrer",
+  "adresse": "Adresse",
+  "permis": "Permis Conduite"
 }
