--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -24,6 +24,10 @@
   "disconnect": "الخروج",
   "profile": "بروفايل",
   "lock": "إغلاق",
+  "username": "إسم المستخدم",
+  "password": "كلمة السر",
+  "signin": "دخول",
+  "signup": "تسجيل",
   "nom": "الإسم ",
   "prenom": "اللقب",
   "adresse": "العنوان",
